Disable behat temporarily.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -248,10 +248,10 @@ workflows:
             branches:
               ignore:
                 - master
-      - behat_test:
-          requires:
-            - deploy_to_pantheon
-            - visual_regression_test
+#      - behat_test:
+#          requires:
+#            - deploy_to_pantheon
+#            - visual_regression_test
 
   scheduled_update_check:
     triggers:
