--- a/composer.json
+++ b/composer.json
@@ -68,9 +68,11 @@
         "drupal/media_entity_browser": "^2.0",
         "drupal/metatag": "^1.8",
         "drupal/module_filter": "^3.1",
+        "drupal/paragraphs": "^1.9",
         "drupal/pathauto": "^1.4",
         "drupal/r4032login": "^1.1",
         "drupal/rabbit_hole": "^1.0@beta",
+        "drupal/radix": "^4.4",
         "drupal/redirect": "^1.3",
         "drupal/search404": "^1.0",
         "drupal/simple_block": "^1.0@beta",
