--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -253,13 +253,13 @@ workflows:
 #            - deploy_to_pantheon
 #            - visual_regression_test
 
-  scheduled_update_check:
-    triggers:
-       - schedule:
-           cron: "0 0 * * *"
-           filters:
-             branches:
-              only:
-                - master
+#  scheduled_update_check:
+#    triggers:
+#       - schedule:
+#           cron: "0 0 * * *"
+#           filters:
+#             branches:
+#              only:
+#                - master
     jobs:
       - composer_lock_updater
